<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.karan.thenaptaker.napdetail.NapDetail">

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker_nap"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker_alarm"
        android:orientation="vertical"
        android:layout_alignTop="@+id/numberPicker_nap"
        android:layout_alignStart="@+id/button_submit"
        android:descendantFocusability="blocksDescendants"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nap_tune"
        android:id="@+id/textView_napTune"
        android:layout_above="@+id/numberPicker_nap"
        android:layout_alignEnd="@+id/numberPicker_nap"
        android:layout_marginBottom="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_tune"
        android:id="@+id/textView_alarmTune"
        android:layout_alignTop="@+id/textView_napTune"
        android:layout_alignEnd="@+id/numberPicker_alarm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button_submit"
        android:onClick="saveDetail"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/set_details_for_nap"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView_napTune"
        android:layout_alignEnd="@+id/editText_name"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText_time"
        android:hint="@string/nap_time"
        android:inputType="numberDecimal"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/button_submit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="Cancel"
        android:layout_below="@+id/editText_time"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/deleteNap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteNap"
        android:text="Delete"
        android:layout_below="@+id/editText_time"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
