...
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button_stop"
        android:onClick="stopNap"
        android:layout_marginBottom="103dp"
        android:layout_above="@+id/textView_creator"
        android:layout_alignEnd="@+id/textView_thanku"
        android:layout_alignStart="@+id/textView_thanku" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/thanku"
        android:id="@+id/textView_thanku"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <TextView
...
