<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_weight="10"
    tools:context="com.karan.thenaptaker.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:onClick="startNap"
        android:text="@string/start_nap" />

    <Button
        android:id="@+id/button_setNap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:onClick="editor"
        android:text="@string/set_nap" />

    <Button
        android:id="@+id/benifits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:onClick="benefits"
        android:text="Benefits"
        android:visibility="visible" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:onClick="about"
        android:text="About"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator_karan"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>
